Highlight Focused Hints Fix bug where Hints labels are not hidden on mobile.

--- a/src/app/components/hints/hints.component.css
+++ b/src/app/components/hints/hints.component.css
@@ -15,3 +15,7 @@
 .hints-number {
     text-align: right;
 }
+
+.hints-table {
+    font-size: 15px;
+}
